--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grpc/proto-loader": "^0.5.2",
+    "@hapi/boom": "^7.2.0",
     "@types/express": "^4.11.1",
     "@types/node": "^10.0.9",
-    "boom": "^7.2.0",
     "express": "^4.16.3",
-    "google-protobuf": "3.5.0",
+    "google-protobuf": "3.9.1",
     "grpc": "^1.11.3",
     "minimist": "^1.2.0",
     "morgan": "^1.9.0",
